--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
     <div id="results-container">
         <p id="selections"></p>
         
-        <div id="player-score">
-
+        <div id="player">
+            <h3>Player Score</h3>
+            <p id="player-score"></p>
         </div>
 
-        <div id="computer-score">
-
+        <div id="computer">
+            <h3>Computer Score</h3>
+            <p id="computer-score"></p>
         </div>
     
     </div>
